--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_background_geolocation
 description: The most sophisticated background location tracking & geofencing module with battery-conscious motion-detection intelligence for iOS and Android.
-version: 5.0.3
+version: 5.0.4
 homepage: https://github.com/transistorsoft/flutter_background_geolocation
+license: Apache-2.0
 
 dependencies:
   flutter:
